# mjAutoURDF

./: 1dof.xml  README.md  ellipsoid.py  main.py  pyproject.toml
sim/: MUJOCO_LOG.TXT  sim_data_mj.py  test_sim.py
