[project]
name = "creativemachines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    # "pytorch3d",
    "open3d",
    "matplotlib",
    "networkx",
    "scipy",
    "scikit-learn",
    "tqdm",
    "pyvista",
    "pymeshfix",
    "mcubes",
    "transforms3d",
    "seaborn",
    "pandas",
    "gymnasium>=1.2.1",
    "tyro>=0.9.35",
    "imageio>=2.37.0",
    "mujoco>=3.3.7",
    "ipython>=9.7.0",
]
